<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        app:fabCustomSize="70dp"
        android:src="@drawable/ic_add_black_24dp" />


    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:elevation="5dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@drawable/linear_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/my_point"/>

                <TextView
                    android:id="@+id/point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:text="100 p"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_point_down"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:src="@drawable/ic_example" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:src="@drawable/ic_example" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:src="@drawable/ic_example" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_example" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginEnd="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event_example" />

                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Event"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginEnd="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event_example" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/community"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event_example" />

                <TextView

                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information"/>

            </LinearLayout>

        </LinearLayout>

        <com.synnapps.carouselview.CarouselView
            android:layout_marginTop="25dp"
            android:id="@+id/slideImage"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:layout_marginTop="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:textStyle="bold"
                android:text="@string/event"/>

            <TextView
                android:textColor="@color/colorBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:textStyle="italic|bold"
                android:text="@string/more"/>
            

        </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_event"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:scrollbars="none" />

        <TextView
            android:layout_marginTop="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:textStyle="bold"
            android:text="@string/join_community"/>

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:layout_marginStart="13dp"
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <TextView
            android:layout_marginTop="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:textStyle="bold"
            android:text="@string/news"/>

        <ImageView
            android:id="@+id/imageNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_banner"/>

        <TextView
            android:layout_marginTop="2dp"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:text="@string/lorem_ipsum"/>

        <Button
            android:layout_marginTop="2dp"
            android:textSize="10sp"
            android:layout_marginEnd="13dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@drawable/more_btn"
            android:layout_gravity="end"
            android:text="Selengkapnya" />

        </LinearLayout>



    </ScrollView>
</FrameLayout>