<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/linear_shape">
        <TextView
            android:id="@+id/txt_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/registrasi"
            android:textAlignment="center"
            android:textSize="20sp" />
        <ScrollView
            android:layout_below="@id/txt_judul"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout

            android:layout_marginHorizontal="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/nama_lengkap"
                android:textSize="12sp" />

            <EditText
                android:layout_below="@id/txt_name"
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_lengkap"
                android:inputType="text" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_below="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/email"
                android:textSize="12sp" />


            <EditText
                android:layout_below="@id/txt_email"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
            <TextView
                android:id="@+id/txt_address"
                android:layout_below="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Alamat"
                android:textSize="12sp" />


            <EditText
                android:layout_below="@id/txt_address"
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Alamat"
                android:inputType="text" />

            <TextView
                android:id="@+id/txt_jk"
                android:layout_below="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Jenis Kelamin"
                android:textSize="12sp" />

            <Spinner
                android:layout_below="@+id/txt_jk"
                android:id="@+id/jk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></Spinner>

            <View
                android:layout_marginTop="5dp"
                android:id="@+id/v1"
                android:layout_below="@+id/jk"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f0f0f0" />

            <TextView
                android:id="@+id/txt_no"
                android:layout_below="@+id/v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/no_hp"
                android:textSize="12sp" />

            <EditText
                android:layout_below="@+id/txt_no"
                android:id="@+id/no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_hp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txt_password"
                android:layout_below="@id/no_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textSize="12sp" />

            <EditText
                android:layout_below="@id/txt_password"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textVisiblePassword" />

            <TextView
                android:id="@+id/txt_photo"
                android:layout_below="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/upload_foto"
                android:textSize="12sp" />

            <RelativeLayout

                android:id="@+id/r1"
                android:layout_below="@id/txt_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher_background" />
                <TextView
                    android:id="@+id/name_photo"
                    android:padding="5dp"
                    android:textSize="10dp"
                    android:text="Pilih foto anda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/pilih"
                    android:layout_toRightOf="@id/photo"/>

                <Button
                    android:textColor="@android:color/white"
                    android:background="@drawable/shape_bg"
                    android:id="@+id/pilih"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:text="Pilih" />
            </RelativeLayout>

            <View
                android:layout_marginTop="10dp"
                android:id="@+id/v2"
                android:layout_below="@+id/r1"
                android:layout_width="282.15dp"
                android:layout_height="1dp"
                android:background="#f0f0f0" />

            <Button
                android:id="@+id/registrasi"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/v2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape_bg"
                android:text="@string/registrasi"
                android:textColor="@android:color/white" />
        </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>
